# pip_package_demo

./: README.md  pyproject.toml
src/pip_package_demo/: main.py
test/: main_demo.py
